// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryStepsDataSource query returns empty data for invalid query 1`] = `
[
  {
    "fields": [],
    "refId": "A",
  },
]
`;

exports[`QueryStepsDataSource query should convert properties to Grafana fields 1`] = `
[
  {
    "name": "Step name",
    "type": "string",
    "values": [
      "Step 1",
    ],
  },
  {
    "name": "Step ID",
    "type": "number",
    "values": [
      "1",
    ],
  },
  {
    "name": "Properties",
    "type": "string",
    "values": [
      "{"key1":"value1","key2":"value2"}",
    ],
  },
  {
    "name": "Workspace",
    "type": "string",
    "values": [
      "Default workspace",
    ],
  },
]
`;

exports[`QueryStepsDataSource query should return data for valid data-output-type query 1`] = `
[
  {
    "fields": [
      {
        "name": "Step name",
        "type": "string",
        "values": [
          "Step 1",
        ],
      },
      {
        "name": "Step ID",
        "type": "number",
        "values": [
          "1",
        ],
      },
      {
        "name": "Properties",
        "type": "string",
        "values": [
          "{"key1":"value1","key2":"value2"}",
        ],
      },
      {
        "name": "Workspace",
        "type": "string",
        "values": [
          "Default workspace",
        ],
      },
    ],
    "name": "A",
    "refId": "A",
  },
]
`;

exports[`QueryStepsDataSource query should return the workspace ID if the workspace cache is empty 1`] = `
[
  {
    "name": "Step name",
    "type": "string",
    "values": [
      "Step 1",
    ],
  },
  {
    "name": "Step ID",
    "type": "number",
    "values": [
      "1",
    ],
  },
  {
    "name": "Properties",
    "type": "string",
    "values": [
      "{"key1":"value1","key2":"value2"}",
    ],
  },
  {
    "name": "Workspace",
    "type": "number",
    "values": [
      "1",
    ],
  },
]
`;

exports[`QueryStepsDataSource query should return the workspace ID if the workspace is not found in the cache 1`] = `
[
  {
    "name": "Step name",
    "type": "string",
    "values": [
      "Step 1",
    ],
  },
  {
    "name": "Step ID",
    "type": "number",
    "values": [
      "1",
    ],
  },
  {
    "name": "Properties",
    "type": "string",
    "values": [
      "{"key1":"value1","key2":"value2"}",
    ],
  },
  {
    "name": "Workspace",
    "type": "number",
    "values": [
      "1",
    ],
  },
]
`;

exports[`QueryStepsDataSource query should return total count for valid total count output type queries 1`] = `
[
  {
    "fields": [
      {
        "name": "A",
        "values": [
          1,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`QueryStepsDataSource query should show column header with no data when QuerySteps API returns empty array 1`] = `
[
  {
    "fields": [
      {
        "name": "Step ID",
        "type": "string",
        "values": [],
      },
    ],
    "name": "A",
    "refId": "A",
  },
]
`;

exports[`QueryStepsDataSource query show measurements is enabled should convert step measurements to Grafana fields as a column 1`] = `
[
  {
    "name": "Step ID",
    "type": "number",
    "values": [
      "1",
      "",
    ],
  },
  {
    "name": "Voltage (V)",
    "type": "number",
    "values": [
      "3.7",
      "3.7",
    ],
  },
  {
    "name": "Voltage-Status",
    "type": "string",
    "values": [
      "Passed",
      "Passed",
    ],
  },
  {
    "name": "Voltage-Low Limit",
    "type": "number",
    "values": [
      "3.5",
      "3.5",
    ],
  },
  {
    "name": "Voltage-High Limit",
    "type": "number",
    "values": [
      "4.0",
      "4.0",
    ],
  },
  {
    "name": "Current (A)",
    "type": "number",
    "values": [
      "",
      "1.2",
    ],
  },
  {
    "name": "Current-Status",
    "type": "string",
    "values": [
      "",
      "Failed",
    ],
  },
  {
    "name": "Current-Low Limit",
    "type": "number",
    "values": [
      "",
      "1.0",
    ],
  },
  {
    "name": "Current-High Limit",
    "type": "number",
    "values": [
      "",
      "1.5",
    ],
  },
]
`;

exports[`QueryStepsDataSource query show measurements is enabled should create empty cells when measurements are not available 1`] = `
[
  {
    "name": "Step ID",
    "type": "number",
    "values": [
      "1",
      "2",
    ],
  },
  {
    "name": "Current",
    "type": "number",
    "values": [
      "1.2",
      "",
    ],
  },
  {
    "name": "Voltage",
    "type": "number",
    "values": [
      "",
      "3.7",
    ],
  },
]
`;

exports[`QueryStepsDataSource query show measurements is enabled should create new columns when units are different in the same measurement 1`] = `
[
  {
    "name": "Step ID",
    "type": "number",
    "values": [
      "1",
      "2",
    ],
  },
  {
    "name": "Current (A)",
    "type": "number",
    "values": [
      "1.2",
      "",
    ],
  },
  {
    "name": "Current (mA)",
    "type": "number",
    "values": [
      "",
      "370",
    ],
  },
]
`;

exports[`QueryStepsDataSource querySteps should return data when there are valid queries 1`] = `
{
  "continuationToken": undefined,
  "steps": [
    {
      "name": "Step 1",
      "properties": {
        "key1": "value1",
        "key2": "value2",
      },
      "stepId": "1",
      "workspace": "1",
    },
  ],
  "totalCount": 1,
}
`;
